// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpetApp /> debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="One Pieces"
      key="One Pieces"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpetApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
